--- a/Music Game - Bachelor/Assembly-CSharp.csproj
+++ b/Music Game - Bachelor/Assembly-CSharp.csproj
@@ -45,21 +45,24 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\AudioMute.cs" />
-     <Compile Include="Assets\ClickArea.cs" />
+     <Compile Include="Assets\Score.cs" />
+     <Compile Include="Assets\Scripts\Andere\AudioMute.cs" />
      <Compile Include="Assets\Scripts\Andere\DeleteObjects.cs" />
      <Compile Include="Assets\Scripts\Andere\GlobalValues.cs" />
+     <Compile Include="Assets\Scripts\Andere\LifeDisplay.cs" />
      <Compile Include="Assets\Scripts\Andere\ObjectMovement.cs" />
+     <Compile Include="Assets\Scripts\Andere\ObjectMovement2.cs" />
+     <Compile Include="Assets\Scripts\Andere\ObjectSpeed.cs" />
+     <Compile Include="Assets\Scripts\ClickArea.cs" />
      <Compile Include="Assets\Scripts\Clicks\Object1Clicks.cs" />
      <Compile Include="Assets\Scripts\Clicks\Object2Clicks.cs" />
      <Compile Include="Assets\Scripts\Clicks\Object3Clicks.cs" />
      <Compile Include="Assets\Scripts\Clicks\Object4Clicks.cs" />
      <Compile Include="Assets\Scripts\Clicks\Object5Clicks.cs" />
-     <Compile Include="Assets\Scripts\Level1Button.cs" />
-     <Compile Include="Assets\Scripts\Level2Button.cs" />
-     <Compile Include="Assets\Scripts\LifeDisplay.cs" />
-     <Compile Include="Assets\Scripts\ObjectMovement2.cs" />
-     <Compile Include="Assets\Scripts\ObjectSpeed.cs" />
+     <Compile Include="Assets\Scripts\GameModeBehaviour.cs" />
+     <Compile Include="Assets\Scripts\Menue\Level1Button.cs" />
+     <Compile Include="Assets\Scripts\Menue\Level2Button.cs" />
+     <Compile Include="Assets\Scripts\SpawnObjects.cs" />
      <Compile Include="Assets\Scripts\Spawnen\SpawnObject1.cs" />
      <Compile Include="Assets\Scripts\Spawnen\SpawnObject2.cs" />
      <Compile Include="Assets\Scripts\Spawnen\SpawnObject3.cs" />
