--- a/Music Game - Bachelor/Assembly-CSharp.csproj
+++ b/Music Game - Bachelor/Assembly-CSharp.csproj
@@ -81,21 +81,21 @@
      <Compile Include="Assets\Scripts\States\StartDeactivation.cs" />
      <Compile Include="Assets\Scripts\States\StateChanger.cs" />
      <Compile Include="Assets\Scripts\States\States.cs" />
-     <Compile Include="Assets\Scripts\Version1\GMVersion1Obj1Behaviour.cs" />
-     <Compile Include="Assets\Scripts\Version1\GMVersion1Obj2Behaviour.cs" />
-     <Compile Include="Assets\Scripts\Version1\GMVersion1Obj3Behaviour.cs" />
-     <Compile Include="Assets\Scripts\Version1\GMVersion1Obj4Behaviour.cs" />
-     <Compile Include="Assets\Scripts\Version1\GMVersion1Obj5Behaviour.cs" />
+     <Compile Include="Assets\Scripts\Version1\MMVersion1Obj1Behaviour.cs" />
+     <Compile Include="Assets\Scripts\Version1\MMVersion1Obj2Behaviour.cs" />
+     <Compile Include="Assets\Scripts\Version1\MMVersion1Obj3Behaviour.cs" />
+     <Compile Include="Assets\Scripts\Version1\MMVersion1Obj4Behaviour.cs" />
+     <Compile Include="Assets\Scripts\Version1\MMVersion1Obj5Behaviour.cs" />
      <Compile Include="Assets\Scripts\Version1\Version1Obj1Behaviour.cs" />
      <Compile Include="Assets\Scripts\Version1\Version1Obj2Behaviour.cs" />
      <Compile Include="Assets\Scripts\Version1\Version1Obj3Behaviour.cs" />
      <Compile Include="Assets\Scripts\Version1\Version1Obj4Behaviour.cs" />
      <Compile Include="Assets\Scripts\Version1\Version1Obj5Behaviour.cs" />
-     <Compile Include="Assets\Scripts\Version2\GMVersion2Obj1Behaviour.cs" />
-     <Compile Include="Assets\Scripts\Version2\GMVersion2Obj2Behaviour.cs" />
-     <Compile Include="Assets\Scripts\Version2\GMVersion2Obj3Behaviour.cs" />
-     <Compile Include="Assets\Scripts\Version2\GMVersion2Obj4Behaviour.cs" />
-     <Compile Include="Assets\Scripts\Version2\GMVersion2Obj5Behaviour.cs" />
+     <Compile Include="Assets\Scripts\Version2\MMVersion2Obj1Behaviour.cs" />
+     <Compile Include="Assets\Scripts\Version2\MMVersion2Obj2Behaviour.cs" />
+     <Compile Include="Assets\Scripts\Version2\MMVersion2Obj3Behaviour.cs" />
+     <Compile Include="Assets\Scripts\Version2\MMVersion2Obj4Behaviour.cs" />
+     <Compile Include="Assets\Scripts\Version2\MMVersion2Obj5Behaviour.cs" />
      <Compile Include="Assets\Scripts\Version2\Version2Obj1Behaviour.cs" />
      <Compile Include="Assets\Scripts\Version2\Version2Obj2Behaviour.cs" />
      <Compile Include="Assets\Scripts\Version2\Version2Obj3Behaviour.cs" />
